:bug: fix overflow

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ nav ul li a {
 nav {
     position: relative;
     right: 2rem;
-    width: 25vw;
+    width: 25%;
 }
 
 ul {
@@ -52,7 +52,7 @@ a:hover{
     color: red;
 }
 .showcase_img {
-    width: 100vw;
+    width: 100%;
     /* margin: .8rem; */
     margin-top: .6rem;
 }
@@ -88,5 +88,9 @@ footer{
     padding: 1rem 0;
     background-color: black;
     color: white;
-    width: 100vw;
+    width: 100%;
+}
+
+body{
+    width: 100%;
 }
